@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-05-19T16:30:50Z",
+  "timestamp" : "2022-05-20T00:48:04Z",
   "count_outdated" : 113,
   "uniques_outdated" : 7,
-  "count" : 385,
-  "uniques" : 17,
+  "count" : 389,
+  "uniques" : 18,
   "views" : [
     {
       "timestamp": "2022-05-06T00:00:00Z",
@@ -72,6 +72,13 @@
       "timestamp": "2022-05-18T00:00:00Z",
       "count": 14,
       "count_minmax": [ 6, 14 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ]
+    },
+    {
+      "timestamp": "2022-05-19T00:00:00Z",
+      "count": 4,
+      "count_minmax": [ 4, 4 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
