@@ -1,3 +1,10 @@
+2022-05-20T00:48:04Z:
+* notice: last 14d: unq all: 1 276
+* notice: prev accum: outdated-unq outdated-all / unq all: 7 113 / 17 385
+* notice: next accum: outdated-unq outdated-all / unq all: 7 113 / 18 389
+* notice: prev exec diff / last date diff / accum: unq all: +1 +4 -0 -0 / +1 +4 -0 -0 / 1 4
+* notice: changed dates: [2022-05-19]
+
 2022-05-19T16:30:50Z:
 * notice: last 14d: unq all: 1 272
 * notice: prev accum: outdated-unq outdated-all / unq all: 6 106 / 17 385
